--- a/training/topics/workflow/PITCHME.yaml
+++ b/training/topics/workflow/PITCHME.yaml
@@ -1,4 +1,5 @@
 # look & feel
 theme: night
-logo: assets/img/devops-loop-and-spans-small.png
+#logo: assets/img/devops-loop-and-spans-small.png
 theme-override: css/PITCHME.css
+background: assets/img/devops-loop-and-spans-small.png
