--- a/training/topics/workflow/PITCHME.yaml
+++ b/training/topics/workflow/PITCHME.yaml
@@ -2,4 +2,4 @@
 theme: night
 #logo: assets/img/devops-loop-and-spans-small.png
 theme-override: css/PITCHME.css
-background: assets/img/devops-loop-and-spans-small.png
+#background: assets/img/devops-loop-and-spans-small.png
