--- a/training/topics/workflow/PITCHME.yaml
+++ b/training/topics/workflow/PITCHME.yaml
@@ -1,5 +1,6 @@
 # look & feel
-theme: night
+#theme: night
 #logo: assets/img/devops-loop-and-spans-small.png
 theme-override: css/PITCHME.css
 #background: assets/img/devops-loop-and-spans-small.png
+background-color: black
