--- a/training/topics/workflow/PITCHME.yaml
+++ b/training/topics/workflow/PITCHME.yaml
@@ -3,7 +3,14 @@
 #theme: moon
 theme: template
 #logo: assets/img/devops-loop-and-spans-small.png
-background-color: gray
 theme-override: css/PITCHME.css
 #background: assets/img/devops-loop-and-spans-small.png
 
+theme-background: ["##808080"]
+theme-headline: ["Raleway", "#5289F7", "none", "#5289F7", "100", "120", "15"]
+theme-byline: ["Raleway", "#111111", "none", "#111111", "100", "110", "15"]
+theme-text: ["Ubuntu", "#1C1C1C", "none", "#1C1C1C", "100", "100", "15"]
+theme-links: ["#5289F7", "#5254F7"]
+theme-code: ["Source Code Pro", "100", "120"]
+theme-controls: ["#484848"]
+theme-margins: ["0", "15px"]
