--- a/training/topics/workflow/PITCHME.yaml
+++ b/training/topics/workflow/PITCHME.yaml
@@ -10,7 +10,7 @@ theme-background: ["#808080"]
 theme-headline: ["Raleway", "#5289F7", "none", "#5289F7", "100", "120", "15"]
 theme-byline: ["Raleway", "#111111", "none", "#111111", "100", "110", "15"]
 theme-text: ["Ubuntu", "#1C1C1C", "none", "#1C1C1C", "100", "100", "15"]
-theme-links: ["#5289F7", "#5254F7"]
+theme-links: ["#8b0000", "#800000"]
 theme-code: ["Source Code Pro", "100", "120"]
 theme-controls: ["#484848"]
 theme-margins: ["0", "15px"]
